<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="system_error">System error:</string>
    <string name="sdk_error">SDK error：</string>
    <string name="connect_fail">Connection failed</string>
    <string name="view_string_hint_push_url">Enter the ingest URL.</string>
    <string name="url_empty">Please enter url</string>
    <string name="btn_confirm">Confirm</string>
    <string name="pull_cancel">Cancel</string>
    <string name="stop_button">Stop pushing</string>
    <string name="start_push">Start pushing</string>
    <string name="resolution_label">Resolution</string>
    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_resolution_1080P">1080P</string>
    <string name="setting_resolution_self_define">Self Define</string>
    <string name="bitrate_control">Bitrate Control</string>
    <string name="variable_resolution">Variable Resolution</string>
    <string name="resolution_width">width：</string>
    <string name="resolution_height">height：</string>
    <string name="resolution_label_desc">To enable the system to automatically switch to the most suitable resolution, you must enable adaptive bitrate streaming. For more information, see the API reference.</string>
    <string name="advance_config">Advanced Settings</string>
    <string name="display_mode">DisplayMode</string>
    <string name="display_mode_full">scaleToFill</string>
    <string name="display_mode_fit">aspectFit</string>
    <string name="display_mode_cut">aspectFill</string>
    <string name="quality_resolution_first">High quality priority</string>
    <string name="quality_fluency_first">fluency priority</string>
    <string name="video_label_desc">You can adjust the video bitrate and frame rate only in custom mode.</string>
    <string name="quality_custom">custom</string>
    <string name="target_bitrate">Target bitrate</string>
    <string name="target_rate_value">1200</string>
    <string name="min_bitrate">Min bitrate</string>
    <string name="min_rate_value">300</string>
    <string name="initial_bitrate">Initial bitrate</string>
    <string name="audio_bitrate">Audio bitrate</string>
    <string name="initial_bit_value">1000</string>
    <string name="audio_bitrate_value">64</string>
    <string name="min_fps">Min fps</string>
    <string name="captrue_fps">Captrue fps</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">Audio sampling rate</string>
    <string name="setting_audio_480">48KHz</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>
    <string name="setting_audio_160">16KHz</string>
    <string name="GOP">Gop</string>
    <string name="audio_profile">Audio profile</string>
    <string name="sound_track">Sound track</string>
    <string name="video_encoder">Video Encoder</string>
    <string name="b_frames">B Frames</string>
    <string name="hardware_encode">Hardware encoder</string>
    <string name="audio_hardware_encode">Audio Hardware encoder</string>
    <string name="setting_audio_aac_lc">LC</string>
    <string name="setting_audio_aac_he">HE-AAC</string>
    <string name="setting_audio_aac_hev2">HEv2-AAC</string>
    <string name="setting_audio_aac_ld">AAC-LD</string>
    <string name="single_track">Single track</string>
    <string name="dual_track">Dual track</string>
    <string name="h264">H264</string>
    <string name="h265">H265</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="video_push_streaming">Default</string>
    <string name="audio_only_push_streaming">Audio only</string>
    <string name="video_only_push_streaming">Video only</string>
    <string name="push_orientation">Ingest To</string>
    <string name="landscape_model">Orientation</string>
    <string name="auto_reconnect">Auto Reconnection</string>
    <string name="reconnect_duration">Reconnection duration</string>
    <string name="input_desc">Enter</string>
    <string name="reconnect_times">Reconnection times</string>
    <string name="watermark">Watermark</string>
    <string name="watermark_open">Watermark</string>
    <string name="watermark_setting">Setting</string>
    <string name="mirror_desc">Mirroring</string>
    <string name="setting_pre_mirror">Preview mirror</string>
    <string name="setting_push_mirror">Push mirror</string>
    <string name="camera_setting">Camera Control</string>
    <string name="front_camera">Front camera</string>
    <string name="auto_focus">Auto focus</string>
    <string name="camera_capture_output_preference">Camera Capture Output Preference</string>
    <string name="camera_capture_output_preference_auto">Auto</string>
    <string name="camera_capture_output_preference_performance">Performance</string>
    <string name="camera_capture_output_preference_preview">Preview</string>
    <string name="beauty_setting">Retouching Switch</string>
    <string name="beauty_enable">Beauty</string>
    <string name="image_push">Ingest Standby Stream</string>
    <string name="pause_image">Pause Image</string>
    <string name="network_image">NetworkPoor Image</string>
    <string name="push_mode">Push Mode</string>
    <string name="url_auth">Url Auth Setting</string>
    <string name="auth_text">Auth Time</string>
    <string name="privacy_text">Privacy Key</string>
    <string name="other_func">Other Features</string>
    <string name="asynchronous_interface">Asynchronous interface</string>
    <string name="music_mode">Music Mode</string>
    <string name="extern_stream_main">Main Extern Stream</string>
    <string name="local_log">Local log</string>

    <string name="push_args">Stream Ingest Parameters</string>
    <string name="stream_pusher_tip">Stream Ingest Features</string>

    <string name="second_rate">/Times</string>
    <string name="tv_sei_message">message</string>
    <string name="tv_sei_payload">payload</string>

    <string name="local_record_tv">Local Record</string>
    <string name="manual_create_egl_context_tv">Manual Create EGLContext</string>
    <string name="sei_send_custom_message_tv">Send Custom Message</string>

</resources>